Fix cardsort label CSS
- Wrap bucket labels that are too
  long so that they do not overlap
  another label
- Put bucket labels into a separate row
  so that the buckets can stay aligned even
  when the labels are of differing lengths
- Hide the label row on xs screens, because the
  row will collapse and list all of the labels and
  then all of the buckets.
- Show the bucket labels inside the bucket row on
  xs screens so that the labels appear directly above
  the bucket.

--- a/exp-player/addon/styles/components/exp-card-sort.scss
+++ b/exp-player/addon/styles/components/exp-card-sort.scss
@@ -30,6 +30,11 @@
     margin-bottom: 12px;
 }
 
-.bucket-label {
+.bucket-label-margin {
     margin-top: 40px;
+}
+
+.bucket-label {
+    text-align: center;
+    overflow-wrap: break-word;
 }
